# yolov8_ncnn

./: .sync.ffs_db  CMakeLists.txt  README.md
capture/: capture_imgs.py
libs/libyolo/: CMakeLists.txt
libs/libyolo/config/: YOLO_Config.txt  yolov8n_new.param
libs/libyolo/inc/: common.hpp  yolo_interface.hpp  yolov8.hpp
libs/libyolo/src/: yolo_interface.cpp  yolov8.cpp
test_uart /: test.ino  uart-send.c
tests/: CMakeLists.txt  main.cpp  test_yolo.cpp
